# wev

./: .coveragerc  .editorconfig  .gitignore  .wev.yml  .yamllint.yml  CODE_OF_CONDUCT  LICENSE  MANIFEST.in  Pipfile  README.md  build.sh  coverage.sh  example.wev.yml  lint.sh  mkdocs.yml  pyproject.toml  setup.cfg  setup.py  test.sh  typhoeus.json
.github/workflows/: ci.yml  on-push.yml  on-release.yml
demo/: .wev.yml  hello.py
docs/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  index.md  installation.md
docs/configuration/: directories.md  filenames.md  index.md  schema.md
docs/create-a-plugin/: code-summary.md  index.md  init.py.md  plugin.py.md  preparation.md  setup.py.md  testing.md
docs/examples/: aws-codeartifact.md  aws-mfa-on-command-line.md  aws-profile-per-project.md  awsmfa.md
docs/plugins/: index.md  wev-awsmfa.md  wev-echo.md
wev/: VERSION  __init__.py  __main__.py  cache.py  cli.py  conftest.py  exceptions.py  executor.py  explainer.py  log.py  mock_plugin.py  plugins.py  resolution_cache.py  resolver.py  test_cache.py  test_cli.py  test_exceptions.py  test_executor.py  test_explainer.py  test_plugins.py  test_resolution_cache.py  test_resolver.py  test_variable.py  test_version.py  text.py  variable.py  variables.py  version.py
wev/logging/: __init__.py  formatter.py  log.py  test_log.py
wev/sdk/: __init__.py  exceptions.py  plugin_base.py  plugin_configuration.py  resolution.py  resolution_support.py  test_exceptions.py
wev/state/: __init__.py  base_state.py  mock_state.py  state.py  test_state.py
wev/text/: __init__.py  (+5 more)
(+3 files in other folders)
